Prevent horizontal scroll without breaking sticky nav

--- a/assets/scss/_3-theme.scss
+++ b/assets/scss/_3-theme.scss
@@ -102,6 +102,9 @@
 }
 
 /* GLOBAL */
+html {
+	overflow-x: clip;
+}
 
 body {
   -webkit-font-smoothing: antialiased;
@@ -224,7 +227,7 @@ body[data-template=home] {
 
 .site-header {
 	display: flex;
-    justify-content: space-between;
+	justify-content: space-between;
 	position: sticky;
 	top: calc($spacer * 6);
 	z-index: 3;
